# Lumiera

./: .gitignore  AUTHORS  Buildhelper.py  DIR_INFO  INSTALL  LICENSE  Makefile.am  README  SConstruct  __README__  ___Documentation___  ___SCONS___  configure.ac  modules  re
admin/: DIR_INFO  Makefile.am  README.deb.lumiera.org.PUB.gpg  SConscript  build_lumiera-build-dependencies.sh  deb.lumiera.org.PUB.gpg  docker_open-lumiera-buildenv.sh  git-mrproper.sh  gnu-indent.sh  headercheck  lumiera_c_skeleton  render-icon.py  render_icon.py  rfc.sh  rsvg-convert.c  rsync_docs_to_lumieraorg.sh  testfilter.sh  testrunner  treeinfo.sh  vg-run.sh  vgsuppression.c  vgsuppression_gen.sh
admin/git_hooks/: DIR_INFO  post-commit
admin/scons/: BuilderDoxygen.py  BuilderGCH.py  Buildhelper.py  DIR_INFO  IconSvgRenderer.py  LumieraEnvironment.py  Options.py  Platform.py  Setup.py  ToolCCache.py  ToolDistCC.py
gui/: config.h  configure.ac
gui/src/: Makefile.am  gtk-lumiera.cpp  gtk-lumiera.glade  gtk-lumiera.h  gtk-lumiera.hpp  main-window.cpp  main-window.h  main.cpp  window-manager.cpp
icons/: Makefile.am  render-icons.py
src/backend/: DIR_INFO  Makefile.am  backend.c  backend.h  config.c  config.h  config_lookup.c  config_lookup.h  config_typed.c  config_wordlist.c  configentry.c  configentry.h  configitem.c  configitem.h  configline.h  enginefacade.cpp  enginefacade.hpp  file-handling.c  file.c  file.h  filedescriptor.c  filedescriptor.h  filedescriptorregistry.c  filedescriptorregistry.h  filehandle.c  filehandle.h  filehandlecache.c  filehandlecache.h  fileheader.c  fileheader.h  interface.c  interface.h  interfacedescriptor.h  interfaceregistry.c  interfaceregistry.h  media-access-facade.cpp  media-access-facade.hpp  mediaaccessfacade.cpp  mediaaccessfacade.hpp  mmap.c  (+23 more)
src/common/: DIR_INFO  Makefile.am  accesscasted.hpp  advice.hpp  appconfig.cpp  appconfig.hpp  appstate.cpp  appstate.hpp  basic-setup.cpp  basic-setup.hpp  bootstrap.cpp  bootstrap.hpp  cmdline.cpp  cmdline.hpp  config-interface.c  config-interface.h  config-lookup.c  config-lookup.h  config-rules.hpp  config-typed.c  config-wordlist.c  config.c  config.h  config_interface.c  config_interface.h  config_lookup.c  config_lookup.h  config_typed.c  config_wordlist.c  configentry.c  configentry.h  configfacade.cpp  configitem.c  configitem.h  configrules.cpp  configrules.hpp  display-interface-proxy.cpp  dummy-func.cpp  dummy-func.hpp  error.cpp  (+54 more)
src/gui/: Makefile.am  autogen.sh  config-keys.cpp  config-keys.hpp  configure.ac  demo-gui-roundtrip.cpp  display-interface-proxy.cpp  display-interface-proxy.hpp  display-service.cpp  display-service.hpp  gtk-base.hpp  gtk-lumiera.cpp  gtk-lumiera.css  gtk-lumiera.hpp  guifacade.hpp  guinotificationfacade.cpp  guistart.cpp  id-scheme.hpp  lumiera-light-theme-complement.css  lumiera.css  lumiera_ui.rc  notification-interface-proxy.cpp  notification-interface-proxy.hpp  notification-service.cpp  notification-service.hpp  style-scheme.cpp  style-scheme.hpp  ui-bus.cpp  ui-bus.hpp  window-manager.cpp  window-manager.hpp
src/lib/: DIR_INFO  Makefile.am  access-casted-o.hpp  access-casted.hpp  accesscasted.hpp  advice.hpp  allocation-cluster.cpp  allocation-cluster.hpp  allocationcluster.cpp  allocationcluster.hpp  allocator-handle.hpp  appconfig.cpp  appconfig.hpp  binary-search.hpp  bool-checkable.hpp  branch-case.hpp  builder-qualifier-support.hpp  call-queue.hpp  cmdline.cpp  cmdline.hpp  concurrency.hpp  condition.c  condition.h  config.c  config.h  config_interface.c  config_interface.h  config_lookup.c  config_lookup.h  config_typed.c  config_wordlist.c  configentry.c  configentry.h  configitem.c  configitem.h  configrules.cpp  configrules.hpp  cuckoo.c  cuckoo.h  del-stash.hpp  (+225 more)
src/lumiera/: DIR_INFO  Makefile.am  appconfig.cpp  appconfig.hpp  appstate.cpp  appstate.hpp  config.c  config.h  config_interface.c  config_interface.h  config_lookup.c  config_lookup.h  config_typed.c  config_wordlist.c  configentry.c  configentry.h  configitem.c  configitem.h  guifacade.cpp  guistart.cpp  instancehandle.hpp  interface.c  interface.h  interfacedescriptor.h  interfaceproxy.cpp  interfaceregistry.c  interfaceregistry.h  lumiera.c  lumiera.h  lumiera_init.c  main.cpp  nobugcfg.cpp  option.cpp  option.hpp  plugin.c  plugin.h  plugin_dynlib.c  subsys.cpp  subsys.hpp  subsystemrunner.hpp
src/proc/: DIR_INFO  Makefile.am  asset.cpp  asset.hpp  assetmanager.cpp  assetmanager.hpp  cmd.hpp  common.hpp  config-resolver.cpp  config-resolver.hpp  controllerfacade.cpp  controllerfacade.hpp  dummy-player-service.cpp  dummy-player-service.hpp  facade.cpp  facade.hpp  frame.cpp  frame.hpp  lumiera.hpp  nobugcfg.cpp  nobugcfg.hpp  state.cpp  state.hpp  stateproxy.cpp  stateproxy.hpp  streamtype.cpp  streamtype.hpp  stypemanager.cpp  stypemanager.hpp
src/tool/: DIR_INFO  Makefile.am  SConscript  alsa.c  alsa.h  hello.c  luidgen.c  main.c  rsvg-convert.c  try.cpp  vgsuppression.c
tests/: .gitignore  00helloworld.tests  00support.tests  00test.tests  10errorhandling.tests  10exception.tests  10timefunctions.tests  11concurrency.tests  11list.tests  11locking.tests  11mpool.tests  11time.tests  11vault-memory.tests  12metaprogramming.tests  15library.tests  15list.tests  15locking.tests  15luid.tests  15mpool.tests  15priqueue.tests  15safeclib.tests  15slist.tests  15time.tests  16calculation.tests  16references.tests  20config.tests  20config_lowlevel.tests  20filedescriptor.tests  20filehandle.tests  20plugin.tests  20threads.tests  22config_highlevel.tests  25fundamental.tests  30backend-file.tests  30backend-scheduler.tests  30backend-threadpool.tests  30interfaces.tests  30mmap.tests  30resourcecollector.tests  31fileheader.tests  (+39 more)
tests/backend/: example_plugin.c  hello_interface.h  plugin_main.c  sync-classlock-test.cpp  sync-locking-test.cpp  sync-timedwait-test.cpp  sync-waiting-test.cpp  test-config.c  test-filedescriptors.c  test-filehandles.c  test-fileheader.c  test-filemmap.c  test-interfaces.c  test-resourcecollector.c  test-threadpool.c  test-threads.c  thread-local-test.cpp  (+3 more)
(+3313 files in other folders)
